# Practica1

./: CMakeLists.txt
src/: MainScheduler.c  MainTask.c  Scheduler.c  Scheduler.h  Task.c  Task.h
